--- a/drobdown.html
+++ b/drobdown.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fuad</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="dropdown.css">
 </head>
 <body>
     <div id="ppp">
